--- a/hw3services.html
+++ b/hw3services.html
@@ -4,6 +4,7 @@
 	<head>
 		<!--Page is going to use all chars, punctuation marks, symbols-->
 		<meta charset = "utf-8">
+		<meta name=‘viewport’ content=“width=device-width, initial-scale=1”>
 		<title>Services | Roitgarts Gardens Fine Florals</title>
 		<link href="style.css" type="text/css" rel="stylesheet">
 		<!--INTERNAL STYLE SHEET-->
